# secureai-dataloss

./: .env  DEPLOYMENT_SUMMARY.md  DEVELOPER_GUIDE.md  Dockerfile  GITHUB_SETUP.md  MONETIZATION_SUMMARY.md  OPEN_SOURCE_STRATEGY.md  PRODUCT_DEVELOPMENT_GUIDE.md  README.md  README_SDK.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  USE_CASES.md  agent_privacy_shield.py  demo_secureai.py  deployment_integration.py  docker-compose.yml  enterprise_ai_gateway.py  install_dependencies.py  integration_guide_for_existing_website.md  license_manager.py  performance_optimization.py  performance_optimization_fixed.py  performance_results.json  pyproject.toml  requirements.txt  secureai_sdk.py  setup_manual.bat  setup_windows.ps1  setup_windows_basic.ps1  setup_windows_simple.ps1  simple_example.py  simple_integration.py  simple_test.py  test_config.py  test_installation.py  test_with_api.py  website_integration_example.py
config/: logging.json  production.json
docs/: ai_model_integration_guide.md  ai_privacy_shield_product_vision.md  business_plan.md  deployment_guide.md  integration_guide.md  pii_detection_guide.md  proxy_service_deployment_guide.md  testing_guide.md  universal_redaction.md  windows_troubleshooting.md
monitoring/: prometheus.yml
pdfmcp/: pyvenv.cfg
pdfmcp/Scripts/: activate  activate.bat
src/masquerade/: advanced_masking.py  ai_privacy_shield.py  configure_claude.py  mcp_universal_redaction.py  performance_optimizer.py  proxy_redaction_service.py  redact_code.py  (+2 more)
test_files/: code.py  config.json  sample.json  sample.py  sample.yaml  simple_test.txt  text.txt
(+19 files in other folders)
