[project]
name = "masquerade"
version = "0.3.0"
description = "A universal privacy firewall for PDFs, code files, and text content that automatically detects and redacts sensitive data"
readme = "README.md"
requires-python = ">=3.10.0,<3.14"
dependencies = [
    "fastmcp==0.4.1",
    "mcp==1.3.0",
    "PyMuPDF>=1.26.0",
    "tinfoil",
    "psutil>=5.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "psutil>=5.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/masquerade"]

[tool.hatch.envs.default]
python = "3.12"